--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "author": "Valentijn Kap <info@valentijnkap.nl>",
   "license": "GPL-3.0",
   "dependencies": {
+    "argon2": "^0.17.2",
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "mongodb": "^3.0.6"
   },
   "devDependencies": {},
   "repository": {
