--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
-    "mongodb": "^3.0.6"
+    "mongodb": "^3.0.6",
+    "multer": "^1.3.0"
   },
   "devDependencies": {},
   "repository": {
