--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mongodb": "^3.0.6",
     "multer": "^1.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "11.0.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/valentijnkap/be-assessment-2.git"
